feat : Section 인증인가 설정 refactor : Section 에러 관리방식 수정